@@ -1,3 +1,8 @@
+2014-08-26  Jonathan Wakely  <jwakely@redhat.com>
+
+	* doc/xml/manual/status_cxx2011.xml: Correct status table.
+	* doc/html/manual/*: Regenerate.
+
 2014-08-04  Jonathan Wakely  <jwakely@redhat.com>
 
 	Backported from mainline
